--- a/app/views/TF0XV1list.ejs
+++ b/app/views/TF0XV1list.ejs
@@ -11,6 +11,11 @@
 	<!--[if IE 7]>
 	<link rel="stylesheet" href="/css/font-awesome-ie7.min.css">
 	<![endif]-->
+	<!--[if lte IE 9]>
+	<script src="/js/html5shiv.min.js"></script>
+	<script src="/js/respond.min.js"></script>
+	<script src="/js/json2.min.js"></script>
+	<![endif]-->
 	<link rel='stylesheet' href='/css/style.css' />
 	<script src="/js/jquery.js"></script>
 	<script src="/js/jquery.cookie.js"></script>
@@ -21,19 +26,18 @@
     <script src="/js/richtext.js"></script>
 	<script src="/js/tangrammy.js"></script>
 </head>
-<body>
-	<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<body style="background-color: #f7f7f9">
+<header class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
 			<a name="top" />
-          <a class="navbar-brand" href="/tangrammy">Tangrammy</a>
+          <a class="navbar-brand" href="/">精益管理</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav tops">
-            			<li ><a href='/' title=''>Home</a></li>
-			<li ><a href='/issues/list' title=''>Issues</a></li>
+            			<li ><a href='/zcar/list' title=''>ZCar</a></li>
 			<li ><a href='/todo/list' title=''>Todo</a></li>
-			<li ><a href='/zcar/list' title=''>ZCar</a></li>
+			<li ><a href='/release/list' title=''>ZCarRelease</a></li>
 			<li class='active backup'></li>
 
           </ul>
@@ -63,10 +67,19 @@
         </div><!--/.nav-collapse -->
 		<a target="_blank" href="https://github.com/ItMan70s/tangrammy"><img style="position: absolute; top: 0; right: 0; border: 0;" src="/img/forkme.png" alt="Fork me on GitHub"></a>
       </div>
-    </div>
-	<div id="container" class="container" style="padding-top:60px;padding-bottom:60px;">
+</header>
+<div style="background-color: #FFF; padding-top:60px;"><div id="container" class="container">
 	
-<h1>Roles  <small><a class="btn btn-link" href="/roles/new" href="/roles/new" style="min-width:80px;"><img src="/img/add.png">New</a></small></h1>
+<h1>Roles  <small><a class="btn btn-link" href="/roles/new" href="/roles/new" style="min-width:80px;"><img src="/img/add.png">New</a></small><div class='btn-group pull-right'>
+<a class='btn btn-lg btn-link glyphicon glyphicon-save dropdown-toggle' data-toggle='dropdown' ></a>
+<ul class='dropdown-menu' role='menu'>
+<li><a href='#' download='.csv' title='Save current page as csv file' >Save as CSV file</a></li>
+<li><a href='#' download='.xls' title='Save current page as Excel file' >Save as Excel file</a></li>
+</ul>
+<a class='pull-right btn btn-lg green glyphicon glyphicon-edit' name='EditMode' title='List with edit buttons'></a>
+</div>
+</h1>
+<% function getShortVal(val) { if (!val || typeof val != 'string') return val; return (val.length > 10 ? val.substr(0,10) : val).replace(/"/g, '&#34;').replace(/'/g, '&#39;');} %>
 <form class='navbar-form navbar-left' action='javascrip:doFilter();'>
 <div class='form-group small' style='width:230px'><div class='input-group'><input type='text' name='filterstring' class='form-control data-filter' value='<%= (request.u.data["condition"] || "") %>' placeholder='Search in page'>
 <div class='input-group-btn'><a class='btn btn-default' filter='' title='Clear search text'>X</a></div></div></div>
@@ -76,19 +89,22 @@
 	</div><% function getF1(val) { 
   var opts = ""; 
   val = "," + (val || "") + ","; 
-  if (val.contains( "," + "*" + ",")) {    opts += "<span class='wid100'>All</span> "; } 
-   if (val.contains( "," + "T2/V1" + ",")) {    opts += "<span class='wid100'>Users</span> "; } 
-   if (val.contains( "," + "T2/V3" + ",")) {    opts += "<span class='wid100'>UserLogin</span> "; } 
-   if (val.contains( "," + "T3/V1" + ",")) {    opts += "<span class='wid100'>Links</span> "; } 
-   if (val.contains( "," + "T4/V1" + ",")) {    opts += "<span class='wid100'>Todo</span> "; } 
-   if (val.contains( "," + "T5/V1" + ",")) {    opts += "<span class='wid100'>Money</span> "; } 
-   if (val.contains( "," + "T5/V2" + ",")) {    opts += "<span class='wid100'>lend</span> "; } 
-   if (val.contains( "," + "T5/V4" + ",")) {    opts += "<span class='wid100'>brotherlend</span> "; } 
-   if (val.contains( "," + "T6/V1" + ",")) {    opts += "<span class='wid100'>books</span> "; } 
-   if (val.contains( "," + "T7/V1" + ",")) {    opts += "<span class='wid100'>Words</span> "; } 
-   if (val.contains( "," + "T9/V1" + ",")) {    opts += "<span class='wid100'>Booking</span> "; } 
-   if (val.contains( "," + "T9/V2" + ",")) {    opts += "<span class='wid100'>Servers</span> "; } 
-   if (val.contains( "," + "TA/V1" + ",")) {    opts += "<span class='wid100'>VMs</span> "; } 
+  if (val.contains( "," + "*" + ",")) {    opts += "All "; } 
+   if (val.contains( "," + "T9/V1" + ",")) {    opts += "Booking "; } 
+   if (val.contains( "," + "T9/V3" + ",")) {    opts += "Booking3 "; } 
+   if (val.contains( "," + "T6/V1" + ",")) {    opts += "Books "; } 
+   if (val.contains( "," + "TB/V1" + ",")) {    opts += "Issues "; } 
+   if (val.contains( "," + "T3/V1" + ",")) {    opts += "Links "; } 
+   if (val.contains( "," + "t/V1" + ",")) {    opts += "Money "; } 
+   if (val.contains( "," + "TF0/V1" + ",")) {    opts += "Roles "; } 
+   if (val.contains( "," + "T9/V2" + ",")) {    opts += "Servers "; } 
+   if (val.contains( "," + "T4/V1" + ",")) {    opts += "Todo "; } 
+   if (val.contains( "," + "TF1/V1" + ",")) {    opts += "Users "; } 
+   if (val.contains( "," + "TA/V1" + ",")) {    opts += "VMs "; } 
+   if (val.contains( "," + "T7/V1" + ",")) {    opts += "Words "; } 
+   if (val.contains( "," + "T1/V1" + ",")) {    opts += "ZCar "; } 
+   if (val.contains( "," + "T1/V2" + ",")) {    opts += "ZCarRelease "; } 
+   if (val.contains( "," + "T5/V2" + ",")) {    opts += "lend "; } 
    return opts; } %>
 <% function getF2(val) { 
   var opts = ""; 
@@ -118,10 +134,10 @@
 	<% if(data.length < 1) { %>
 	<tr><td colspan="7">No recorder yet. Add one now? <a class="btn btn-link" href="/roles/new" href="/roles/new" style="min-width:80px;"><img src="/img/add.png">New</a></td></tr>	<% }
  var group = ""; for(var item in data) { 
- %><tr Rid='<%= data[item]["Rid"] %>'><td  Fid='F0'><a  class="" href="/roles/show?Rid=<%= data[item]["Rid"] %>" title="Click for detail information"><%= ("F0" in data[item]) ? data[item]["F0"] : "" %></a></td>
-<td class="col-md-6"  Fid='F1'><%- getF1(data[item]["F1"]) %></td>
-<td  Fid='F2'><%- getF2(data[item]["F2"]) %></td>
-<td  Fid='F3'><%- getF3(data[item]["F3"]) %></td>
+ %><tr Rid='<%= data[item]["Rid"] %>'><td  Fid='F0' val="<%= getShortVal(data[item]["F0"]) %>" ><a  class="" href="/roles/show?Rid=<%= data[item]["Rid"] %>" title="Click for detail information"><%= ("F0" in data[item]) ? data[item]["F0"] : "" %></a></td>
+<td class="col-md-6"  Fid='F1' val="<%= getShortVal(data[item]["F1"]) %>" ><%- getF1(data[item]["F1"]) %></td>
+<td  Fid='F2' val="<%= getShortVal(data[item]["F2"]) %>" ><%- getF2(data[item]["F2"]) %></td>
+<td  Fid='F3' val="<%= getShortVal(data[item]["F3"]) %>" ><%- getF3(data[item]["F3"]) %></td>
 <td class="wid30"><a href="/roles/update?Rid=<%= data[item]["Rid"] %>" title=""><img src="/img/edit.png"></a></td>
 <td class="wid30"><a href="/roles/copy?Rid=<%= data[item]["Rid"] %>" title=""><img src="/img/copy.png"></a></td>
 <td class="wid30"><a name="remove" href="javascript:;" url="/roles/remove?Rid=<%= data[item]["Rid"] %>" name="delete" title=""><img src="/img/remove.png"></a></td>
@@ -171,21 +187,40 @@
     </div>
   </div>
 </div>
-	<hr />
-	<footer>
+	<a name="bottom" > </a>
+</div></div>
+	
+<footer style="border-top: 1px solid #e1e1e8; padding: 15px 0;">
+<div class="container padding0">
 	<div class="col-md-12 form-group small">
-		<ul class="pager nomargin pull-left">
-		<li><label>推荐网站:</label></li>
-		<li><a href="http://mgcrea.github.io/angular-strap/#"  title="Share Point">Angular Strap</a></li>
-		<li><a href="http://www.whycss.com/" >前端网址导航</a></li>
+		<ul class="pager nomargin" style="text-align: left;">
+		<li><label>推荐网站: </label></li>
+		<li><a href="http://mgcrea.github.io/angular-strap/#" target="_blank" title="">Angular Strap</a></li>
+		<li><a href="http://www.apjs.net/" target="_blank" >Angular中文网</a></li>
+		<li><a href="http://docs.ngnice.com/api/ng/service/$q" target="_blank" >Angular API</a></li>
+		<li><a href="http://www.whycss.com/" target="_blank" >前端网址导航</a></li>
+		<li><a href="http://ionichina.cn/docs/components/" target="_blank" >Ionic</a></li>
+		<li><a href="http://codepen.io/ionic/public-list/" target="_blank" >Ionic Codes</a></li>
+		<li><a href="http://www.bootcss.com/p/layoutit/#" target="_blank" >Bootstrap布局</a></li>
+		</ul>
+	</div>
+	<div class="col-md-12 form-group small">
+		<ul class="pager nomargin" style="text-align: left;">
+		<li><label>友情链接: </label></li>
+		<li><a href="http://kunkkawu.com" target="_blank" title="吴坤的博客">吴坤的博客</a></li>
+		<li><a href="http://www.yaozihao.cn" target="_blank" title="子豪的博客">子豪的博客</a></li>
+		<li><a href="http://www.cnblogs.com/itman70s" target="_blank">Job的博客</a></li>
+		<li><a href="http://itman70s.github.io/richtext/" target="_blank">富文本控件</a></li>
+		<li><label>小工具: </label></li>
+		<li><a href="/base64.html" target="_blank">Base64转换</a></li>
+		<li><a href="/super.html" title="代码同步等小工具">小工具</a></li>		
+		<li><a href="#" download=".xls" title="尝试下载当前页面数据">下载</a></li>		
 		</ul>
 	</div>
 	<div class="col-md-12 right">
-		Created by <a href="https://github.com/ItMan70s/Tangrammy/">Tangrammy 0.3.0</a> at 2015.
+		Created by <a href="https://github.com/ItMan70s/Tangrammy/">Tangrammy 0.3.0</a> at 2016
 	</div>
-	</footer>
-	</div>
-	<a name="bottom" > </a>
+</div>
+</footer>
 </body>
 </html>
-
