--- a/app/views/TF0XV1new.ejs
+++ b/app/views/TF0XV1new.ejs
@@ -11,6 +11,11 @@
 	<!--[if IE 7]>
 	<link rel="stylesheet" href="/css/font-awesome-ie7.min.css">
 	<![endif]-->
+	<!--[if lte IE 9]>
+	<script src="/js/html5shiv.min.js"></script>
+	<script src="/js/respond.min.js"></script>
+	<script src="/js/json2.min.js"></script>
+	<![endif]-->
 	<link rel='stylesheet' href='/css/style.css' />
 	<script src="/js/jquery.js"></script>
 	<script src="/js/jquery.cookie.js"></script>
@@ -21,19 +26,18 @@
     <script src="/js/richtext.js"></script>
 	<script src="/js/tangrammy.js"></script>
 </head>
-<body>
-	<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<body style="background-color: #f7f7f9">
+<header class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
 			<a name="top" />
-          <a class="navbar-brand" href="/tangrammy">Tangrammy</a>
+          <a class="navbar-brand" href="/">精益管理</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav tops">
-            			<li ><a href='/' title=''>Home</a></li>
-			<li ><a href='/issues/list' title=''>Issues</a></li>
+            			<li ><a href='/zcar/list' title=''>ZCar</a></li>
 			<li ><a href='/todo/list' title=''>Todo</a></li>
-			<li ><a href='/zcar/list' title=''>ZCar</a></li>
+			<li ><a href='/release/list' title=''>ZCarRelease</a></li>
 			<li class='active backup'></li>
 
           </ul>
@@ -63,8 +67,8 @@
         </div><!--/.nav-collapse -->
 		<a target="_blank" href="https://github.com/ItMan70s/tangrammy"><img style="position: absolute; top: 0; right: 0; border: 0;" src="/img/forkme.png" alt="Fork me on GitHub"></a>
       </div>
-    </div>
-	<div id="container" class="container" style="padding-top:60px;padding-bottom:60px;">
+</header>
+<div style="background-color: #FFF; padding-top:60px;"><div id="container" class="container">
 	
 <h1>Add New Roles</h1>
 
@@ -79,19 +83,22 @@
 </div>
 <div class='col-md-12'>		<div><label class='control-label title-label'>Application<B class='red'>*</B></label><div class='controls'>
 <% var val = data["F1"] || "";  val = "," + val.toString() + ",";%><div class='form-control min-h34'><input type='checkbox' name='F1' value='' checked=true class='hidden' ><div class='min-h20'>
-			<label class='checkbox-inline col-md-2 wid100'><input type='checkbox' name='F1' value='*'  <%= (val.contains( "," + "*" + ",")) ? "checked=true" : "" %> >All</label>
-			<label class='checkbox-inline col-md-2 wid100'><input type='checkbox' name='F1' value='T2/V1'  <%= (val.contains( "," + "T2/V1" + ",")) ? "checked=true" : "" %> >Users</label>
-			<label class='checkbox-inline col-md-2 wid100'><input type='checkbox' name='F1' value='T2/V3'  <%= (val.contains( "," + "T2/V3" + ",")) ? "checked=true" : "" %> >UserLogin</label>
-			<label class='checkbox-inline col-md-2 wid100'><input type='checkbox' name='F1' value='T3/V1'  <%= (val.contains( "," + "T3/V1" + ",")) ? "checked=true" : "" %> >Links</label>
-			<label class='checkbox-inline col-md-2 wid100'><input type='checkbox' name='F1' value='T4/V1'  <%= (val.contains( "," + "T4/V1" + ",")) ? "checked=true" : "" %> >Todo</label>
-			<label class='checkbox-inline wid100'><input type='checkbox' name='F1' value='T5/V1'  <%= (val.contains( "," + "T5/V1" + ",")) ? "checked=true" : "" %> >Money</label></div><div class='min-h20'>
-			<label class='checkbox-inline col-md-2 wid100'><input type='checkbox' name='F1' value='T5/V2'  <%= (val.contains( "," + "T5/V2" + ",")) ? "checked=true" : "" %> >lend</label>
-			<label class='checkbox-inline col-md-2 wid100'><input type='checkbox' name='F1' value='T5/V4'  <%= (val.contains( "," + "T5/V4" + ",")) ? "checked=true" : "" %> >brotherlend</label>
-			<label class='checkbox-inline col-md-2 wid100'><input type='checkbox' name='F1' value='T6/V1'  <%= (val.contains( "," + "T6/V1" + ",")) ? "checked=true" : "" %> >books</label>
-			<label class='checkbox-inline col-md-2 wid100'><input type='checkbox' name='F1' value='T7/V1'  <%= (val.contains( "," + "T7/V1" + ",")) ? "checked=true" : "" %> >Words</label>
-			<label class='checkbox-inline col-md-2 wid100'><input type='checkbox' name='F1' value='T9/V1'  <%= (val.contains( "," + "T9/V1" + ",")) ? "checked=true" : "" %> >Booking</label>
-			<label class='checkbox-inline wid100'><input type='checkbox' name='F1' value='T9/V2'  <%= (val.contains( "," + "T9/V2" + ",")) ? "checked=true" : "" %> >Servers</label></div><div class='min-h20'>
-			<label class='checkbox-inline col-md-2 wid100'><input type='checkbox' name='F1' value='TA/V1'  <%= (val.contains( "," + "TA/V1" + ",")) ? "checked=true" : "" %> >VMs</label></div></div></div></div>
+			<label class='checkbox-inline col-md-2 '><input type='checkbox' name='F1' value='*'  <%= (val.contains( "," + "*" + ",")) ? "checked=true" : "" %> >All</label>
+			<label class='checkbox-inline col-md-2 '><input type='checkbox' name='F1' value='T9/V1'  <%= (val.contains( "," + "T9/V1" + ",")) ? "checked=true" : "" %> >Booking</label>
+			<label class='checkbox-inline col-md-2 '><input type='checkbox' name='F1' value='T9/V3'  <%= (val.contains( "," + "T9/V3" + ",")) ? "checked=true" : "" %> >Booking3</label>
+			<label class='checkbox-inline col-md-2 '><input type='checkbox' name='F1' value='T6/V1'  <%= (val.contains( "," + "T6/V1" + ",")) ? "checked=true" : "" %> >Books</label>
+			<label class='checkbox-inline '><input type='checkbox' name='F1' value='TB/V1'  <%= (val.contains( "," + "TB/V1" + ",")) ? "checked=true" : "" %> >Issues</label></div><div class='min-h20'>
+			<label class='checkbox-inline col-md-2 '><input type='checkbox' name='F1' value='T3/V1'  <%= (val.contains( "," + "T3/V1" + ",")) ? "checked=true" : "" %> >Links</label>
+			<label class='checkbox-inline col-md-2 '><input type='checkbox' name='F1' value='t/V1'  <%= (val.contains( "," + "t/V1" + ",")) ? "checked=true" : "" %> >Money</label>
+			<label class='checkbox-inline col-md-2 '><input type='checkbox' name='F1' value='TF0/V1'  <%= (val.contains( "," + "TF0/V1" + ",")) ? "checked=true" : "" %> >Roles</label>
+			<label class='checkbox-inline col-md-2 '><input type='checkbox' name='F1' value='T9/V2'  <%= (val.contains( "," + "T9/V2" + ",")) ? "checked=true" : "" %> >Servers</label>
+			<label class='checkbox-inline '><input type='checkbox' name='F1' value='T4/V1'  <%= (val.contains( "," + "T4/V1" + ",")) ? "checked=true" : "" %> >Todo</label></div><div class='min-h20'>
+			<label class='checkbox-inline col-md-2 '><input type='checkbox' name='F1' value='TF1/V1'  <%= (val.contains( "," + "TF1/V1" + ",")) ? "checked=true" : "" %> >Users</label>
+			<label class='checkbox-inline col-md-2 '><input type='checkbox' name='F1' value='TA/V1'  <%= (val.contains( "," + "TA/V1" + ",")) ? "checked=true" : "" %> >VMs</label>
+			<label class='checkbox-inline col-md-2 '><input type='checkbox' name='F1' value='T7/V1'  <%= (val.contains( "," + "T7/V1" + ",")) ? "checked=true" : "" %> >Words</label>
+			<label class='checkbox-inline col-md-2 '><input type='checkbox' name='F1' value='T1/V1'  <%= (val.contains( "," + "T1/V1" + ",")) ? "checked=true" : "" %> >ZCar</label>
+			<label class='checkbox-inline '><input type='checkbox' name='F1' value='T1/V2'  <%= (val.contains( "," + "T1/V2" + ",")) ? "checked=true" : "" %> >ZCarRelease</label></div><div class='min-h20'>
+			<label class='checkbox-inline col-md-2 '><input type='checkbox' name='F1' value='T5/V2'  <%= (val.contains( "," + "T5/V2" + ",")) ? "checked=true" : "" %> >lend</label></div></div></div></div>
 </div>
 <div class='col-md-12'>		<div><label class='control-label title-label'>Enable</label><div class='controls'>
 <% var val = data["F2"] || "";  val = "," + val.toString() + ",";%><div class='form-control min-h34'><div class='min-h20'>
@@ -142,21 +149,40 @@
     </div>
   </div>
 </div>
-	<hr />
-	<footer>
+	<a name="bottom" > </a>
+</div></div>
+	
+<footer style="border-top: 1px solid #e1e1e8; padding: 15px 0;">
+<div class="container padding0">
 	<div class="col-md-12 form-group small">
-		<ul class="pager nomargin pull-left">
-		<li><label>推荐网站:</label></li>
-		<li><a href="http://mgcrea.github.io/angular-strap/#"  title="Share Point">Angular Strap</a></li>
-		<li><a href="http://www.whycss.com/" >前端网址导航</a></li>
+		<ul class="pager nomargin" style="text-align: left;">
+		<li><label>推荐网站: </label></li>
+		<li><a href="http://mgcrea.github.io/angular-strap/#" target="_blank" title="">Angular Strap</a></li>
+		<li><a href="http://www.apjs.net/" target="_blank" >Angular中文网</a></li>
+		<li><a href="http://docs.ngnice.com/api/ng/service/$q" target="_blank" >Angular API</a></li>
+		<li><a href="http://www.whycss.com/" target="_blank" >前端网址导航</a></li>
+		<li><a href="http://ionichina.cn/docs/components/" target="_blank" >Ionic</a></li>
+		<li><a href="http://codepen.io/ionic/public-list/" target="_blank" >Ionic Codes</a></li>
+		<li><a href="http://www.bootcss.com/p/layoutit/#" target="_blank" >Bootstrap布局</a></li>
+		</ul>
+	</div>
+	<div class="col-md-12 form-group small">
+		<ul class="pager nomargin" style="text-align: left;">
+		<li><label>友情链接: </label></li>
+		<li><a href="http://kunkkawu.com" target="_blank" title="吴坤的博客">吴坤的博客</a></li>
+		<li><a href="http://www.yaozihao.cn" target="_blank" title="子豪的博客">子豪的博客</a></li>
+		<li><a href="http://www.cnblogs.com/itman70s" target="_blank">Job的博客</a></li>
+		<li><a href="http://itman70s.github.io/richtext/" target="_blank">富文本控件</a></li>
+		<li><label>小工具: </label></li>
+		<li><a href="/base64.html" target="_blank">Base64转换</a></li>
+		<li><a href="/super.html" title="代码同步等小工具">小工具</a></li>		
+		<li><a href="#" download=".xls" title="尝试下载当前页面数据">下载</a></li>		
 		</ul>
 	</div>
 	<div class="col-md-12 right">
-		Created by <a href="https://github.com/ItMan70s/Tangrammy/">Tangrammy 0.3.0</a> at 2015.
+		Created by <a href="https://github.com/ItMan70s/Tangrammy/">Tangrammy 0.3.0</a> at 2016
 	</div>
-	</footer>
-	</div>
-	<a name="bottom" > </a>
+</div>
+</footer>
 </body>
 </html>
-
