--- a/app/views/TF1XV1list.ejs
+++ b/app/views/TF1XV1list.ejs
@@ -11,6 +11,11 @@
 	<!--[if IE 7]>
 	<link rel="stylesheet" href="/css/font-awesome-ie7.min.css">
 	<![endif]-->
+	<!--[if lte IE 9]>
+	<script src="/js/html5shiv.min.js"></script>
+	<script src="/js/respond.min.js"></script>
+	<script src="/js/json2.min.js"></script>
+	<![endif]-->
 	<link rel='stylesheet' href='/css/style.css' />
 	<script src="/js/jquery.js"></script>
 	<script src="/js/jquery.cookie.js"></script>
@@ -21,19 +26,18 @@
     <script src="/js/richtext.js"></script>
 	<script src="/js/tangrammy.js"></script>
 </head>
-<body>
-	<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<body style="background-color: #f7f7f9">
+<header class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
 			<a name="top" />
-          <a class="navbar-brand" href="/tangrammy">Tangrammy</a>
+          <a class="navbar-brand" href="/">精益管理</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav tops">
-            			<li ><a href='/' title=''>Home</a></li>
-			<li ><a href='/issues/list' title=''>Issues</a></li>
+            			<li ><a href='/zcar/list' title=''>ZCar</a></li>
 			<li ><a href='/todo/list' title=''>Todo</a></li>
-			<li ><a href='/zcar/list' title=''>ZCar</a></li>
+			<li ><a href='/release/list' title=''>ZCarRelease</a></li>
 			<li class='active backup'></li>
 
           </ul>
@@ -63,10 +67,19 @@
         </div><!--/.nav-collapse -->
 		<a target="_blank" href="https://github.com/ItMan70s/tangrammy"><img style="position: absolute; top: 0; right: 0; border: 0;" src="/img/forkme.png" alt="Fork me on GitHub"></a>
       </div>
-    </div>
-	<div id="container" class="container" style="padding-top:60px;padding-bottom:60px;">
+</header>
+<div style="background-color: #FFF; padding-top:60px;"><div id="container" class="container">
 	
-<h1>Users  <small><a class="btn btn-link" href="/users/new" href="/users/new" style="min-width:80px;"><img src="/img/add.png">Add User</a></small></h1>
+<h1>Users  <small><a class="btn btn-link" href="/users/new" href="/users/new" style="min-width:80px;"><img src="/img/add.png">Add User</a></small><div class='btn-group pull-right'>
+<a class='btn btn-lg btn-link glyphicon glyphicon-save dropdown-toggle' data-toggle='dropdown' ></a>
+<ul class='dropdown-menu' role='menu'>
+<li><a href='#' download='.csv' title='Save current page as csv file' >Save as CSV file</a></li>
+<li><a href='#' download='.xls' title='Save current page as Excel file' >Save as Excel file</a></li>
+</ul>
+<a class='pull-right btn btn-lg green glyphicon glyphicon-edit' name='EditMode' title='List with edit buttons'></a>
+</div>
+</h1>
+<% function getShortVal(val) { if (!val || typeof val != 'string') return val; return (val.length > 10 ? val.substr(0,10) : val).replace(/"/g, '&#34;').replace(/'/g, '&#39;');} %>
 <form class='navbar-form navbar-left' action='javascrip:doFilter();'>
 <div class='form-group small' style='width:230px'><div class='input-group'><input type='text' name='filterstring' class='form-control data-filter' value='<%= (request.u.data["condition"] || "") %>' placeholder='Search in page'>
 <div class='input-group-btn'><a class='btn btn-default' filter='' title='Clear search text'>X</a></div></div></div>
@@ -111,12 +124,12 @@
 	<% if(data.length < 1) { %>
 	<tr><td colspan="10">No recorder yet. Add one now? <a class="btn btn-link" href="/users/new" href="/users/new" style="min-width:80px;"><img src="/img/add.png">Add User</a></td></tr>	<% }
  var group = ""; for(var item in data) { 
- %><tr Rid='<%= data[item]["Rid"] %>'><td Fid='F0'><%= ("F0" in data[item]) ? data[item]["F0"] : "" %></td>
-<td Fid='F1'><%= ("F1" in data[item]) ? data[item]["F1"] : "" %></td>
-<td Fid='F2'>******</td>
-<td Fid='F3'><%- getF3(data[item]["F3"]) %></td>
-<td Fid='F4'><%- getF4(data[item]["F4"]) %></td>
-<td Fid='F5'><%- getF5(data[item]["F5"]) %></td>
+ %><tr Rid='<%= data[item]["Rid"] %>'><td Fid='F0' val="<%= getShortVal(data[item]["F0"]) %>" ><%= ("F0" in data[item]) ? data[item]["F0"] : "" %></td>
+<td Fid='F1' val="<%= getShortVal(data[item]["F1"]) %>" ><%= ("F1" in data[item]) ? data[item]["F1"] : "" %></td>
+<td Fid='F2' val="<%= getShortVal(data[item]["F2"]) %>" >******</td>
+<td Fid='F3' val="<%= getShortVal(data[item]["F3"]) %>" ><%- getF3(data[item]["F3"]) %></td>
+<td Fid='F4' val="<%= getShortVal(data[item]["F4"]) %>" ><%- getF4(data[item]["F4"]) %></td>
+<td Fid='F5' val="<%= getShortVal(data[item]["F5"]) %>" ><%- getF5(data[item]["F5"]) %></td>
 <td Fid="show"><a href="/users/show?Rid=<%= data[item]["Rid"] %>" title="">Detail</a></td>
 <td Fid="edit"><a href="/users/update?Rid=<%= data[item]["Rid"] %>" title=""><img src="/img/edit.png"></a></td>
 <td Fid="copy"><a href="/users/copy?Rid=<%= data[item]["Rid"] %>" title=""><img src="/img/copy.png"></a></td>
@@ -167,21 +180,40 @@
     </div>
   </div>
 </div>
-	<hr />
-	<footer>
+	<a name="bottom" > </a>
+</div></div>
+	
+<footer style="border-top: 1px solid #e1e1e8; padding: 15px 0;">
+<div class="container padding0">
 	<div class="col-md-12 form-group small">
-		<ul class="pager nomargin pull-left">
-		<li><label>推荐网站:</label></li>
-		<li><a href="http://mgcrea.github.io/angular-strap/#"  title="Share Point">Angular Strap</a></li>
-		<li><a href="http://www.whycss.com/" >前端网址导航</a></li>
+		<ul class="pager nomargin" style="text-align: left;">
+		<li><label>推荐网站: </label></li>
+		<li><a href="http://mgcrea.github.io/angular-strap/#" target="_blank" title="">Angular Strap</a></li>
+		<li><a href="http://www.apjs.net/" target="_blank" >Angular中文网</a></li>
+		<li><a href="http://docs.ngnice.com/api/ng/service/$q" target="_blank" >Angular API</a></li>
+		<li><a href="http://www.whycss.com/" target="_blank" >前端网址导航</a></li>
+		<li><a href="http://ionichina.cn/docs/components/" target="_blank" >Ionic</a></li>
+		<li><a href="http://codepen.io/ionic/public-list/" target="_blank" >Ionic Codes</a></li>
+		<li><a href="http://www.bootcss.com/p/layoutit/#" target="_blank" >Bootstrap布局</a></li>
+		</ul>
+	</div>
+	<div class="col-md-12 form-group small">
+		<ul class="pager nomargin" style="text-align: left;">
+		<li><label>友情链接: </label></li>
+		<li><a href="http://kunkkawu.com" target="_blank" title="吴坤的博客">吴坤的博客</a></li>
+		<li><a href="http://www.yaozihao.cn" target="_blank" title="子豪的博客">子豪的博客</a></li>
+		<li><a href="http://www.cnblogs.com/itman70s" target="_blank">Job的博客</a></li>
+		<li><a href="http://itman70s.github.io/richtext/" target="_blank">富文本控件</a></li>
+		<li><label>小工具: </label></li>
+		<li><a href="/base64.html" target="_blank">Base64转换</a></li>
+		<li><a href="/super.html" title="代码同步等小工具">小工具</a></li>		
+		<li><a href="#" download=".xls" title="尝试下载当前页面数据">下载</a></li>		
 		</ul>
 	</div>
 	<div class="col-md-12 right">
-		Created by <a href="https://github.com/ItMan70s/Tangrammy/">Tangrammy 0.3.0</a> at 2015.
+		Created by <a href="https://github.com/ItMan70s/Tangrammy/">Tangrammy 0.3.0</a> at 2016
 	</div>
-	</footer>
-	</div>
-	<a name="bottom" > </a>
+</div>
+</footer>
 </body>
 </html>
-
