--- a/app/views/welcome.ejs
+++ b/app/views/welcome.ejs
@@ -11,6 +11,11 @@
 	<!--[if IE 7]>
 	<link rel="stylesheet" href="/css/font-awesome-ie7.min.css">
 	<![endif]-->
+	<!--[if lte IE 9]>
+	<script src="/js/html5shiv.min.js"></script>
+	<script src="/js/respond.min.js"></script>
+	<script src="/js/json2.min.js"></script>
+	<![endif]-->
 	<link rel='stylesheet' href='/css/style.css' />
 	<script src="/js/jquery.js"></script>
 	<script src="/js/jquery.cookie.js"></script>
@@ -21,19 +26,18 @@
     <script src="/js/richtext.js"></script>
 	<script src="/js/tangrammy.js"></script>
 </head>
-<body>
-	<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<body style="background-color: #f7f7f9">
+<header class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
 			<a name="top" />
-          <a class="navbar-brand" href="/tangrammy">Tangrammy</a>
+          <a class="navbar-brand" href="/">精益管理</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav tops">
-            			<li class='active'><a href='/' title=''>Home</a></li>
-			<li><a href='/issues/list' title=''>Issues</a></li>
-			<li><a href='/todo/list' title=''>Todo</a></li>
-			<li><a href='/zcar/list' title=''>ZCar</a></li>
+            			<li><a href='/zcar/list' title=''>ZCar</a></li>
+			<li><a href='/todo/list' title=''>任务<br></a></li>
+			<li><a href='/release/list' title=''>ZCarRelease</a></li>
 
           </ul>
           <ul class="nav navbar-nav pull-right">
@@ -62,12 +66,12 @@
         </div><!--/.nav-collapse -->
 		<a target="_blank" href="https://github.com/ItMan70s/tangrammy"><img style="position: absolute; top: 0; right: 0; border: 0;" src="/img/forkme.png" alt="Fork me on GitHub"></a>
       </div>
-    </div>
-	<div id="container" class="container" style="padding-top:60px;padding-bottom:60px;">
+</header>
+<div style="background-color: #FFF; padding-top:60px;"><div id="container" class="container">
 	
-	<div class="jumbotron homepage">
-		<h1>Welcome!</h1>
-		<p>This a sample of tangrammy system. </p>
+	<div class="well">
+		<h2 style="margin-top: 0px;">精益管理</h2>
+		<p>精益管理要求企业的各项活动都必须运用“精益思维” (Lean Thinking）。“精益思维”的核心就是以最小资源投入，包括人力、设备、资金、材料、时间和空间， 创造出尽可能多的价值，为顾客提供新产品和及时的服务。</p>
 </div>
 <div class="col-md-12"><div class="row">
 <% if (!request.u.apps || request.u.apps.contains("*") || request.u.apps.contains("T9/V1")) { %>
@@ -105,13 +109,6 @@
 		<p class="text-right"><a href="/links/list" role="button">Details »</a></p>
 	</div>
 <% } %>
-<% if (!request.u.apps || request.u.apps.contains("*") || request.u.apps.contains("t/V1")) { %>
-	<div class="col-md-3" style="border: 1px solid #ccc;">
-		<h2><a href="/Money/list">Money</a></h2>
-		<div style="height: 60px; overflow: hidden;"><p>记账</p></div>
-		<p class="text-right"><a href="/Money/list" role="button">Details »</a></p>
-	</div>
-<% } %>
 <% if (!request.u.apps || request.u.apps.contains("*") || request.u.apps.contains("TF0/V1")) { %>
 	<div class="col-md-3" style="border: 1px solid #ccc;">
 		<h2><a href="/roles/list">Roles</a></h2>
@@ -124,13 +121,6 @@
 		<h2><a href="/servers/list">Servers</a></h2>
 		<div style="height: 60px; overflow: hidden;"><p>Define servers (SD2, DH, OA, VC, Kauai, Tiger, Sentosa, Coyote) in Houston and China to enable make reservation.</p></div>
 		<p class="text-right"><a href="/servers/list" role="button">Details »</a></p>
-	</div>
-<% } %>
-<% if (!request.u.apps || request.u.apps.contains("*") || request.u.apps.contains("T4/V1")) { %>
-	<div class="col-md-3" style="border: 1px solid #ccc;">
-		<h2><a href="/todo/list">Todo</a></h2>
-		<div style="height: 60px; overflow: hidden;"><p>用于管理项目的各种属于我的事项。 </p></div>
-		<p class="text-right"><a href="/todo/list" role="button">Details »</a></p>
 	</div>
 <% } %>
 <% if (!request.u.apps || request.u.apps.contains("*") || request.u.apps.contains("TF1/V1")) { %>
@@ -175,6 +165,20 @@
 		<p class="text-right"><a href="/lend/list" role="button">Details »</a></p>
 	</div>
 <% } %>
+<% if (!request.u.apps || request.u.apps.contains("*") || request.u.apps.contains("T4/V1")) { %>
+	<div class="col-md-3" style="border: 1px solid #ccc;">
+		<h2><a href="/todo/list">任务<br></a></h2>
+		<div style="height: 60px; overflow: hidden;"><p>用于管理项目的各种属于我的事项。 </p></div>
+		<p class="text-right"><a href="/todo/list" role="button">Details »</a></p>
+	</div>
+<% } %>
+<% if (request.u.apps && request.u.apps.contains("*")) { %>
+	<div class="col-md-3" style="border: 1px solid #ccc;">
+		<h2><a href="/tangrammy">Tangrammy</a></h2>
+		<div style="height: 60px; overflow: hidden;"><p>Define/edit/rebuild applications.</p></div>
+		<p class="text-right"><a href="/tangrammy" role="button">Details »</a></p>
+	</div>
+<% } %>
 </div></div>
 
 	<div class="go-top">
@@ -207,21 +211,40 @@
     </div>
   </div>
 </div>
-	<hr />
-	<footer>
+	<a name="bottom" > </a>
+</div></div>
+	
+<footer style="border-top: 1px solid #e1e1e8; padding: 15px 0;">
+<div class="container padding0">
 	<div class="col-md-12 form-group small">
-		<ul class="pager nomargin pull-left">
-		<li><label>推荐网站:</label></li>
-		<li><a href="http://mgcrea.github.io/angular-strap/#"  title="Share Point">Angular Strap</a></li>
-		<li><a href="http://www.whycss.com/" >前端网址导航</a></li>
+		<ul class="pager nomargin" style="text-align: left;">
+		<li><label>推荐网站: </label></li>
+		<li><a href="http://mgcrea.github.io/angular-strap/#" target="_blank" title="">Angular Strap</a></li>
+		<li><a href="http://www.apjs.net/" target="_blank" >Angular中文网</a></li>
+		<li><a href="http://docs.ngnice.com/api/ng/service/$q" target="_blank" >Angular API</a></li>
+		<li><a href="http://www.whycss.com/" target="_blank" >前端网址导航</a></li>
+		<li><a href="http://ionichina.cn/docs/components/" target="_blank" >Ionic</a></li>
+		<li><a href="http://codepen.io/ionic/public-list/" target="_blank" >Ionic Codes</a></li>
+		<li><a href="http://www.bootcss.com/p/layoutit/#" target="_blank" >Bootstrap布局</a></li>
+		</ul>
+	</div>
+	<div class="col-md-12 form-group small">
+		<ul class="pager nomargin" style="text-align: left;">
+		<li><label>友情链接: </label></li>
+		<li><a href="http://kunkkawu.com" target="_blank" title="吴坤的博客">吴坤的博客</a></li>
+		<li><a href="http://www.yaozihao.cn" target="_blank" title="子豪的博客">子豪的博客</a></li>
+		<li><a href="http://www.cnblogs.com/itman70s" target="_blank">Job的博客</a></li>
+		<li><a href="http://itman70s.github.io/richtext/" target="_blank">富文本控件</a></li>
+		<li><label>小工具: </label></li>
+		<li><a href="/base64.html" target="_blank">Base64转换</a></li>
+		<li><a href="/super.html" title="代码同步等小工具">小工具</a></li>		
+		<li><a href="#" download=".xls" title="尝试下载当前页面数据">下载</a></li>		
 		</ul>
 	</div>
 	<div class="col-md-12 right">
-		Created by <a href="https://github.com/ItMan70s/Tangrammy/">Tangrammy 0.3.0</a> at 2015.
+		Created by <a href="https://github.com/ItMan70s/Tangrammy/">Tangrammy 0.3.0</a> at 2016
 	</div>
-	</footer>
-	</div>
-	<a name="bottom" > </a>
+</div>
+</footer>
 </body>
 </html>
-
